# cardano-observer

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  build.rs  start-dev.sh  start.sh
cardano-observer-backend/: .env.example  Cargo.toml  README.md
cardano-observer-backend/src/: config.rs  error.rs  fetch_error.rs  ids.rs  lib.rs  main.rs  pagination.rs  rows.rs
cardano-observer-backend/src/routes/: accounts.rs  governance.rs  misc.rs  mod.rs  pools.rs  txs.rs
cardano-observer-backend/tests/: api.rs
cardano-observer-backend/tests/fixtures/: schema.sql
src/: config.rs  dapp_stub.rs  deleg.rs  demo.rs  dex.rs  dreps.rs  enrich.rs  gov_actions.rs  handles.rs  logo_colors.rs  main.rs  model.rs  ogmios.rs  parse.rs  persist.rs  pool_history.rs  pools.rs  registry.rs  scam_tokens.rs  server.rs  state.rs  trending.rs
src/dapp/: chadswap.rs  cswap.rs  dano.rs  dex.rs  fluidtokens.rs  geniusyield.rs  iagon.rs  indigo.rs  liqwid.rs  minswap.rs  mod.rs  muesliswap.rs  optim.rs  splash.rs  strike.rs  sundaeswap.rs  surf.rs  vyfinance.rs  wayup.rs  wingriders.rs
static/: app.js  index.html  style.css
static/dapp/: mod.js
static/dex/: mod.js
