[package]
name = "cardano-observer"
version = "1.0.0"
edition = "2024"
description = "Real-time Cardano chain event monitor - every on-chain event, live, in your browser"
license = "MIT"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["ws"] }
bech32 = "0.11"
blake2b_simd = "1"
dotenvy = "0.15"
futures-util = "0.3"
hex = "0.4"
humantime = "2"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "signal"] }
tokio-tungstenite = "0.26"
tower-http = { version = "0.6", features = ["compression-gzip", "compression-br"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zip = { version = "2", features = ["deflate"] }

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
