[package]
name = "cardano-observer-backend"
version = "0.1.0"
edition = "2024"
description = "Self-hosted Cardano data API for cardano-observer, backed by cardano-db-sync"
license = "MIT"

[dependencies]
anyhow = "1"
axum = "0.8"
bech32 = "0.11"
dotenvy = "0.15"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls-ring",
    "postgres",
    "json",
] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }
tower-http = { version = "0.6", features = ["compression-gzip"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
